// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

generator erd {
  provider = "prisma-erd-generator"
  output   = "./ERD.svg"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// Role enum sesuai 5 role utama + 3 Kepala Bagian
enum Role {
  SEKRETARIS_KANTOR
  KETUA_PENGURUS
  SEKRETARIS_PENGURUS
  BENDAHARA
  KEPALA_BAGIAN_PSDM
  KEPALA_BAGIAN_KEUANGAN
  KEPALA_BAGIAN_UMUM
}

enum StatusSurat {
  PENGAJUAN
  DITERIMA
  DIPROSES
  DISPOSISI
  MENUNGGU_VALIDASI
  DISETUJUI
  SELESAI
  DIKEMBALIKAN
}

enum StatusDisposisi {
  PENDING
  DITERUSKAN
  DITINDAKLANJUTI
  SELESAI
}

enum SifatSurat {
  INTERNAL
  EKSTERNAL
}

model User {
  id        String   @id @default(uuid())
  email     String   @unique
  password  String
  nama      String
  role      Role
  isActive  Boolean  @default(true)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  suratMasukDibuat  SuratMasuk[]    @relation("SuratMasukCreator")
  suratKeluarDibuat SuratKeluar[]   @relation("SuratKeluarCreator")
  disposisiDari     Disposisi[]     @relation("DisposisiFrom")
  disposisiKe       Disposisi[]     @relation("DisposisiTo")
  lampiranUpload    Lampiran[]      @relation("LampiranUploader")
  tracking          TrackingSurat[] @relation("TrackingUser")
}

model SuratMasuk {
  id              String        @id @default(uuid())
  nomorSurat      String
  tanggalSurat    DateTime
  tanggalDiterima DateTime      @default(now())
  pengirim        String
  perihal         String
  jenisSurat      SifatSurat
  status          StatusSurat   @default(DITERIMA)
  tujuan          String?       // Intended recipient name (e.g. "Sekretaris Yayasan")
  fileUrl         String?
  filePublicId    String?
  keterangan      String?
  isLengkap       Boolean       @default(true)
  createdAt       DateTime      @default(now())
  updatedAt       DateTime      @updatedAt

  createdById String
  createdBy   User   @relation("SuratMasukCreator", fields: [createdById], references: [id])

  disposisi    Disposisi[]
  lampiran     Lampiran[]
  tracking     TrackingSurat[]
  suratBalasan SuratKeluar?    @relation("SuratBalasan")
}

model SuratKeluar {
  id           String        @id @default(uuid())
  nomorSurat   String?       // Nomor asli dari pembuat (Kabag/Ketua/Admin)
  nomorSuratAdmin String?    // Nomor urut Admin (jika surat dari Kabag disetujui Admin)
  tanggalSurat DateTime?
  tujuan       String
  perihal      String
  jenisSuratId String?
  jenisSurat   JenisSurat?   @relation(fields: [jenisSuratId], references: [id])
  kodeArea     String?       // Store requested area code (A, B, C...)
  status       StatusSurat   @default(DIPROSES)
  isiSurat     String?       @db.Text
  fileUrl      String?
  filePublicId String?
  finalFileUrl String?     // Official letter uploaded by Admin
  finalFilePublicId String?
  isSigned     Boolean       @default(false)
  signedAt     DateTime?
  keterangan   String?
  ekspedisi    String?
  tanggalKirim DateTime?
  createdAt    DateTime      @default(now())
  updatedAt    DateTime      @updatedAt
  isRead       Boolean       @default(false)

  createdById String
  createdBy   User   @relation("SuratKeluarCreator", fields: [createdById], references: [id])

  suratMasukId String?     @unique
  suratMasuk   SuratMasuk? @relation("SuratBalasan", fields: [suratMasukId], references: [id])

  disposisi Disposisi[]
  lampiran  Lampiran[]
  tracking  TrackingSurat[]
}

model Disposisi {
  id               String          @id @default(uuid())
  instruksi        String
  catatan          String?
  status           StatusDisposisi @default(PENDING)
  tanggalDisposisi DateTime        @default(now())
  tanggalSelesai   DateTime?
  createdAt        DateTime        @default(now())
  updatedAt        DateTime        @updatedAt

  fromUserId String
  fromUser   User   @relation("DisposisiFrom", fields: [fromUserId], references: [id])
  toUserId   String
  toUser     User   @relation("DisposisiTo", fields: [toUserId], references: [id])

  suratMasukId String?
  suratMasuk   SuratMasuk? @relation(fields: [suratMasukId], references: [id])
  suratKeluarId String?
  suratKeluar   SuratKeluar? @relation(fields: [suratKeluarId], references: [id])

  isRequestLampiran Boolean @default(false)
}

model Lampiran {
  id           String   @id @default(uuid())
  fileUrl      String
  filePublicId String
  fileName     String
  fileType     String
  uploadedAt   DateTime @default(now())

  uploadedById String
  uploadedBy   User   @relation("LampiranUploader", fields: [uploadedById], references: [id])

  suratMasukId String?
  suratMasuk    SuratMasuk?  @relation(fields: [suratMasukId], references: [id])
  suratKeluarId String?
  suratKeluar   SuratKeluar? @relation(fields: [suratKeluarId], references: [id])
}

model TrackingSurat {
  id        String   @id @default(uuid())
  timestamp DateTime @default(now())
  aksi       String
  keterangan String?

  userId String
  user   User   @relation("TrackingUser", fields: [userId], references: [id])

  suratMasukId  String?
  suratMasuk    SuratMasuk?  @relation(fields: [suratMasukId], references: [id])
  suratKeluarId String?
  suratKeluar   SuratKeluar? @relation(fields: [suratKeluarId], references: [id])
}

model NomorSuratCounter {
  id          String   @id @default(uuid())
  tahun       Int
  kodeBagian  String   @default("SEK") // e.g. "PERS", "KEU", "SEK"
  counter     Int      @default(0)
  updatedAt   DateTime @updatedAt

  @@unique([tahun, kodeBagian]) // Separate counter per year AND per unit
}

model JenisSurat {
  id        String   @id @default(uuid())
  kode      String   @unique // e.g., "SK", "UND", "ST"
  nama      String   // e.g., "Surat Keputusan", "Undangan"
  format    String?  // Optional format string if needed
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  suratKeluar SuratKeluar[]
}

model KodeBagian {
  id            String   @id @default(uuid())
  role          String   @unique // Maps to User Role
  kodeInternal  String   // e.g. "PERS"
  kodeEksternal String   // e.g. "HRD"
  namaBagian    String   // e.g. "Bagian Personalia"
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt
}

model KodeArea {
  id        String   @id @default(uuid())
  kode      String   @unique // e.g., "A", "B", "D1"
  nama      String   // e.g., "Intern Kantor Yayasan"
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}
