erDiagram
    USER ||--o{ SURAT_MASUK : "membuat"
    USER ||--o{ SURAT_KELUAR : "membuat"
    USER ||--o{ DISPOSISI : "mengirim"
    USER ||--o{ DISPOSISI : "menerima"

    SURAT_MASUK ||--o{ DISPOSISI : "memiliki"
    SURAT_MASUK ||--o{ LAMPIRAN : "memiliki"
    SURAT_MASUK ||--o{ TRACKING : "memiliki"
    SURAT_MASUK ||--o| SURAT_KELUAR : "dibalas"

    SURAT_KELUAR ||--o{ DISPOSISI : "memiliki"
    SURAT_KELUAR ||--o{ LAMPIRAN : "memiliki"
    SURAT_KELUAR ||--o{ TRACKING : "memiliki"
    SURAT_KELUAR }o--|| JENIS_SURAT : "bertipe"
